Добавил задел для работы с файлами

--- a/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
@@ -95,6 +95,8 @@
     <Compile Include="ServiceClient\IRmaOperations.cs" />
     <Compile Include="ServiceClient\RmaOperations.cs" />
     <Compile Include="ViewModels\IMainViewModel.cs" />
+    <Compile Include="ViewModels\IOrderFilesContainerViewModel.cs" />
+    <Compile Include="ViewModels\OrderFilesContainerViewModel.cs" />
     <Compile Include="ViewModels\ToothCard\MaterialViewModel.cs" />
     <Compile Include="ViewModels\IOrderViewModel.cs" />
     <Compile Include="ViewModels\OrderLightViewModel.cs" />
@@ -104,6 +106,7 @@
     <Compile Include="ViewModels\ToothCard\ToothChangedEventArgs.cs" />
     <Compile Include="ViewModels\ToothCard\ToothViewModel.cs" />
     <Compile Include="ViewModels\ToothCard\IToothCardViewModel.cs" />
+    <Compile Include="Mocks\DesignMockOrderFilesContainerViewModel.cs" />
     <Compile Include="ViewModels\Wizard\IWizardStepsProvider.cs" />
     <Compile Include="ViewModels\Wizard\IWizardStepViewModel.cs" />
     <Compile Include="ViewModels\Wizard\LaboratoryInfoWizardStepViewModel.cs" />
