--- a/src/Germadent.DataAccessService/App.config
+++ b/src/Germadent.DataAccessService/App.config
@@ -10,7 +10,7 @@
 
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
-      <target xsi:type="File" name="file" fileName="${basedir}/logs/${shortdate}.log"
+      <target xsi:type="File" name="file" fileMaterialName="${basedir}/logs/${shortdate}.log"
               layout="${longdate} | ${uppercase:${level}} | ${logger} | ${message}" />
     </targets>
 
