--- a/src/Germadent.DataAccessService/Germadent.DataAccessService.csproj
+++ b/src/Germadent.DataAccessService/Germadent.DataAccessService.csproj
@@ -72,7 +72,9 @@
   <ItemGroup>
     <Compile Include="Configuration\IServiceConfiguration.cs" />
     <Compile Include="Configuration\ServiceConfiguration.cs" />
+    <Compile Include="Entities\AdditionalEquipmentEntity.cs" />
     <Compile Include="Entities\Conversion\EntityToDtoConverter.cs" />
+    <Compile Include="Entities\EquipmentEntity.cs" />
     <Compile Include="Entities\MaterialEntity.cs" />
     <Compile Include="Entities\OrderEntity.cs" />
     <Compile Include="Entities\OrderEntity.Laboratory.cs" />
