Scroll to selected

--- a/src/Germadent.Rma.App/Germadent.Rma.App/App.config
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/App.config
@@ -6,9 +6,9 @@
   <appSettings>
 
     <!-- Адрес сервиса для работы с данными -->
-    <add key="DataServiceUrl" value="http://89.189.186.48:4444" />
+    <add key="DataServiceUrl" value="http://localhost:4444" />
 
     <!--Режим работы (Mock - тестовые данные, Server - сервер )-->
-    <add key="WorkMode" value="Mock" />
+    <add key="WorkMode" value="Server" />
   </appSettings>
 </configuration>
