Поправил мелкие замечания по приемке

--- a/src/Germadent.DataAccessService/App.config
+++ b/src/Germadent.DataAccessService/App.config
@@ -27,6 +27,6 @@
     <add key="Port" value="4444" />
 
     <!--Строка подключения к БД-->
-    <add key="ConnectionString" value="Data Source=localhost;Initial Catalog=Germadent;Integrated Security=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;User Id=ofm; Password=gdl2020" />
+    <add key="ConnectionString" value="Data Source=89.189.186.48;Initial Catalog=Germadent;Integrated Security=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;User Id=ofm; Password=gdl2020" />
   </appSettings>
 </configuration>
