--- a/src/Germadent.Rma.App/Germadent.Rma.App/App.config
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/App.config
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
+
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
   </startup>
+
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target xsi:type="File" name="file" fileName="${basedir}/logs/${shortdate}.log"
+              layout="${longdate} | ${uppercase:${level}} | ${logger} | ${message}" />
+    </targets>
+
+    <rules>
+      <logger name="*" minlevel="Trace" writeTo="file" />
+    </rules>
+  </nlog>
+
   <appSettings>
 
     <!-- Адрес сервиса для работы с данными -->
