Изменение сетевых настроек, добавление свойств в RmaRepository

--- a/src/Germadent.Rma.App/Germadent.Rma.App/App.config
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/App.config
@@ -22,7 +22,7 @@
   <appSettings>
 
     <!-- Адрес сервиса для работы с данными -->
-    <add key="DataServiceUrl" value="http://localhost:4444" />
+    <add key="DataServiceUrl" value="http://192.168.15.13:4444" />
 
     <!--Режим работы (Mock - тестовые данные, Server - сервер )-->
     <add key="WorkMode" value="Server" />
