Работа с буфером обмена и тесты

--- a/src/Germadent.Rma.App.Test/Germadent.Rma.App.Test.csproj
+++ b/src/Germadent.Rma.App.Test/Germadent.Rma.App.Test.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DesignTimeViewModelsTest.cs" />
+    <Compile Include="MainViewModelTest.cs" />
     <Compile Include="PrintableOrderConverterTest.cs" />
     <Compile Include="ToothCardViewModelTest.cs" />
     <Compile Include="ToothViewModelTest.cs" />
