--- a/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
@@ -84,17 +84,18 @@
     </ApplicationDefinition>
     <Compile Include="Configuration\RmaConfiguration.cs" />
     <Compile Include="Converters\BranchTypeToStringConverter.cs" />
-    <Compile Include="Printing\IPrintableOrderConverter.cs" />
-    <Compile Include="Printing\PrintableOrder.cs" />
-    <Compile Include="Printing\TemplateProcessing\IWordAssembler.cs" />
-    <Compile Include="Printing\TemplateProcessing\MetaNames.cs" />
-    <Compile Include="Printing\TemplateProcessing\WordJsonAssembler.cs" />
-    <Compile Include="Printing\TemplateProcessing\WordXmlPartAssembler.cs" />
-    <Compile Include="Printing\TemplateProcessing\Wrd.cs" />
-    <Compile Include="Printing\TemplateProcessing\XElementExtensions.cs" />
-    <Compile Include="Printing\TemplateProcessing\XElementFactory.cs" />
-    <Compile Include="Printing\IPrintModule.cs" />
-    <Compile Include="Printing\PrintModule.cs" />
+    <Compile Include="Reporting\ClipboardWorks.cs" />
+    <Compile Include="Reporting\IPrintableOrderConverter.cs" />
+    <Compile Include="Reporting\PrintableOrder.cs" />
+    <Compile Include="Reporting\TemplateProcessing\IWordAssembler.cs" />
+    <Compile Include="Reporting\TemplateProcessing\MetaNames.cs" />
+    <Compile Include="Reporting\TemplateProcessing\WordJsonAssembler.cs" />
+    <Compile Include="Reporting\TemplateProcessing\WordXmlPartAssembler.cs" />
+    <Compile Include="Reporting\TemplateProcessing\Wrd.cs" />
+    <Compile Include="Reporting\TemplateProcessing\XElementExtensions.cs" />
+    <Compile Include="Reporting\TemplateProcessing\XElementFactory.cs" />
+    <Compile Include="Reporting\IPrintModule.cs" />
+    <Compile Include="Reporting\PrintModule.cs" />
     <Compile Include="ServiceClient\IFileResponse.cs" />
     <Compile Include="ServiceClient\IRmaAuthorizer.cs" />
     <Compile Include="ServiceClient\IRmaOperations.cs" />
