--- a/src/Germadent.Rma.App.Test/Germadent.Rma.App.Test.csproj
+++ b/src/Germadent.Rma.App.Test/Germadent.Rma.App.Test.csproj
@@ -66,7 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DesignTimeViewModelsTest.cs" />
+    <Compile Include="ClipboardReporterTest.cs" />
     <Compile Include="MainViewModelTest.cs" />
     <Compile Include="PrintableOrderConverterTest.cs" />
     <Compile Include="ToothCardViewModelTest.cs" />
