Работа по ЦУП кипит

--- a/src/Germadent.UserManagementCenter.Model/Germadent.UserManagementCenter.Model.csproj
+++ b/src/Germadent.UserManagementCenter.Model/Germadent.UserManagementCenter.Model.csproj
@@ -41,6 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Rights\UserRightsBase.cs" />
+    <Compile Include="Rights\RightDto.cs" />
+    <Compile Include="Rights\RmaUserRightsBase.cs" />
+    <Compile Include="Rights\UmcUserRightsBase.cs" />
+    <Compile Include="Rights\UserRightsProvider.cs" />
     <Compile Include="RoleDto.cs" />
     <Compile Include="UserDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
