--- a/src/Germadent.UserManagementCenter.App/Germadent.UserManagementCenter.App.csproj
+++ b/src/Germadent.UserManagementCenter.App/Germadent.UserManagementCenter.App.csproj
@@ -65,9 +65,19 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ServiceClient\IUserManagementCenterOperations.cs" />
+    <Compile Include="ServiceClient\UserManagementCenterOperations.cs" />
+    <Compile Include="ViewModels\IRolesManagerViewModel.cs" />
     <Compile Include="ViewModels\IUsersManagerViewModel.cs" />
+    <Compile Include="ViewModels\RightViewModel.cs" />
+    <Compile Include="ViewModels\RolesManagerViewModel.cs" />
+    <Compile Include="ViewModels\RoleViewModel.cs" />
     <Compile Include="ViewModels\UsersManagerViewModel.cs" />
     <Compile Include="ViewModels\UserViewModel.cs" />
+    <Compile Include="Views\AddUserWindow.xaml.cs">
+      <DependentUpon>AddUserWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\DesignTime\DesignMockMainViewModel.cs" />
+    <Compile Include="Views\DesignTime\DesignMockRolesManagerViewModel.cs" />
     <Compile Include="Views\DesignTime\DesignMockUsersManagerViewModel.cs" />
     <Compile Include="Views\RightsView.xaml.cs">
       <DependentUpon>RightsView.xaml</DependentUpon>
@@ -78,6 +88,10 @@
     <Compile Include="Views\UsersView.xaml.cs">
       <DependentUpon>UsersView.xaml</DependentUpon>
     </Compile>
+    <Page Include="Views\AddUserWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -133,6 +147,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Germadent.Common\Germadent.Common.csproj">
+      <Project>{A73F2837-286E-4DF2-95A7-6A383B67A66B}</Project>
+      <Name>Germadent.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Germadent.UI\Germadent.UI.csproj">
       <Project>{E3944E28-D2B6-471B-ACC7-316315C602A1}</Project>
       <Name>Germadent.UI</Name>
