Добавил тесты на ЦУП

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ src/Germadent.UserManagementCenter.App/obj/
 src/Germadent.UserManagementCenter.Model/bin/
 src/Germadent.UserManagementCenter.Model/obj/
 src/Germadent.UserManagementCenter.App/bin/
+src/Germadent.UserManagementCenter.App.Test/obj/
+src/Germadent.UserManagementCenter.App.Test/bin/
