--- a/src/Germadent.UserManagementCenter.App/Germadent.UserManagementCenter.App.csproj
+++ b/src/Germadent.UserManagementCenter.App/Germadent.UserManagementCenter.App.csproj
@@ -66,6 +66,8 @@
     </ApplicationDefinition>
     <Compile Include="ServiceClient\IUserManagementCenterOperations.cs" />
     <Compile Include="ServiceClient\UserManagementCenterOperations.cs" />
+    <Compile Include="ViewModels\AddUserViewModel.cs" />
+    <Compile Include="ViewModels\IAddUserViewModel.cs" />
     <Compile Include="ViewModels\IRolesManagerViewModel.cs" />
     <Compile Include="ViewModels\IUsersManagerViewModel.cs" />
     <Compile Include="ViewModels\RightViewModel.cs" />
@@ -76,9 +78,11 @@
     <Compile Include="Views\AddUserWindow.xaml.cs">
       <DependentUpon>AddUserWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\DesignTime\DesignMockAddUserViewModel.cs" />
     <Compile Include="Views\DesignTime\DesignMockMainViewModel.cs" />
     <Compile Include="Views\DesignTime\DesignMockRolesManagerViewModel.cs" />
     <Compile Include="Views\DesignTime\DesignMockUsersManagerViewModel.cs" />
+    <Compile Include="Views\IWindowManager.cs" />
     <Compile Include="Views\RightsView.xaml.cs">
       <DependentUpon>RightsView.xaml</DependentUpon>
     </Compile>
@@ -88,6 +92,7 @@
     <Compile Include="Views\UsersView.xaml.cs">
       <DependentUpon>UsersView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\WindowManager.cs" />
     <Page Include="Views\AddUserWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
