Добавил окно добавления пользователей и класс с тестами для него

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ src/Germadent.UserManagementCenter.Model/obj/
 src/Germadent.UserManagementCenter.App/bin/
 src/Germadent.UserManagementCenter.App.Test/obj/
 src/Germadent.UserManagementCenter.App.Test/bin/
+src/Germadent.TestUtils/bin/
+src/Germadent.TestUtils/obj/
