--- a/src/Germadent.TestUtils/Germadent.TestUtils.csproj
+++ b/src/Germadent.TestUtils/Germadent.TestUtils.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E50944A7-D140-4F58-A567-51B6AB2BCDC4}</ProjectGuid>
+    <ProjectGuid>{E095E843-0678-44EC-88B0-34D031BF0A0C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Germadent.UserManagementCenter.App.Test</RootNamespace>
-    <AssemblyName>Germadent.UserManagementCenter.App.Test</AssemblyName>
+    <RootNamespace>Germadent.TestUtils</RootNamespace>
+    <AssemblyName>Germadent.TestUtils</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -40,6 +40,9 @@
     <Reference Include="Moq, Version=4.13.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.13.1\lib\net45\Moq.dll</HintPath>
     </Reference>
+    <Reference Include="Moq.AutoMock, Version=1.2.0.120, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.AutoMock.1.2.0.120\lib\net45\Moq.AutoMock.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.12.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -60,27 +63,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddUserViewModelTest.cs" />
-    <Compile Include="MainViewModelTest.cs" />
+    <Compile Include="AutoMockerTestsBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Germadent.TestUtils\Germadent.TestUtils.csproj">
-      <Project>{e095e843-0678-44ec-88b0-34d031bf0a0c}</Project>
-      <Name>Germadent.TestUtils</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Germadent.UI\Germadent.UI.csproj">
-      <Project>{E3944E28-D2B6-471B-ACC7-316315C602A1}</Project>
-      <Name>Germadent.UI</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Germadent.UserManagementCenter.App\Germadent.UserManagementCenter.App.csproj">
-      <Project>{ADB1CC4C-14C9-459C-B96D-07D370EFDA40}</Project>
-      <Name>Germadent.UserManagementCenter.App</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
