--- a/src/Germadent.DataAccessService/Germadent.DataAccessService.csproj
+++ b/src/Germadent.DataAccessService/Germadent.DataAccessService.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Configuration\ServiceConfiguration.cs" />
     <Compile Include="Entities\AdditionalEquipmentEntity.cs" />
     <Compile Include="Entities\Conversion\EntityToDtoConverter.cs" />
+    <Compile Include="Entities\CustomerEntity.cs" />
     <Compile Include="Entities\DataFileAttributes.cs" />
     <Compile Include="Entities\EquipmentEntity.cs" />
     <Compile Include="Entities\ExcelEntity.cs" />
@@ -87,6 +88,7 @@
     <Compile Include="DataAccessServiceBootstrapper.cs" />
     <Compile Include="Entities\ProstheticConditionEntity.cs" />
     <Compile Include="Entities\ProstheticTypeEntity.cs" />
+    <Compile Include="Entities\ResponsiblePersonEntity.cs" />
     <Compile Include="Entities\ToothEntity.cs" />
     <Compile Include="Entities\TransparencesEntity.cs" />
     <Compile Include="Infrastructure\NancyService.cs" />
