--- a/src/Germadent.DataAccessService/Germadent.DataAccessService.csproj
+++ b/src/Germadent.DataAccessService/Germadent.DataAccessService.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Configuration\IServiceConfiguration.cs" />
     <Compile Include="Configuration\ServiceConfiguration.cs" />
     <Compile Include="Entities\AdditionalEquipmentEntity.cs" />
+    <Compile Include="Entities\AttributesEntity.cs" />
     <Compile Include="Entities\Conversion\EntityToDtoConverter.cs" />
     <Compile Include="Entities\CustomerEntity.cs" />
     <Compile Include="Entities\DataFileAttributes.cs" />
